--- a/NETBIOS/netbios.conf
+++ b/NETBIOS/netbios.conf
@@ -1,2 +1,6 @@
-#Equipo,t1,t2,t3,t4,t5,t6,t7,t8,t9,t10
-Andres,10,100,200,400,600,200,10000,1200,9000,10000
+### Archivo de configuracion del CHARGEN server ###
+### Las ip deben tener el formato: IP x.x.x.x y.y.y.y z.z.z.z ###
+IP 192.168.126.134 192.168.85.139 127.0.0.1
+Equipo HoneyP
+Tarpiting 10 100 200 400 600 200 10000 1200 9000 10000
+
