--- a/qotd.conf
+++ b/qotd.conf
@@ -1,6 +1,6 @@
-### Archivo de configuracion del CHARGEN server ###
+### Archivo de configuracion del QOTD server ###
 ##### Si se desea el comportamiento por defecto, comentar la linea "Data" ###
 ### Las ip deben tener el formato: IP x.x.x.x y.y.y.y z.z.z.z ###
 IP 192.168.126.134 192.168.85.140 127.0.0.1
-#Data 12345678900qwertyuiopasdfghjklñzxcvbnm,
+#Data Saludo
 Tarpiting a b c d e f g h i
