--- a/dns.conf
+++ b/dns.conf
@@ -1,8 +1,10 @@
 ### Archivo de configuracion del DNS server ###
 ##### Si se desea el comportamiento por defecto, comentar la linea correspondiente al registro ###
 ### Las ip deben tener el formato: IP x.x.x.x y.y.y.y z.z.z.z ###
-IP 192.168.126.134 192.168.85.140 127.0.0.1
+#IP 192.168.126.135 192.168.85.141 
+IP 10.0.2.15
 A 132.248.1.1
 MX mail.test
 NS dns.test
-Tarpiting a b c d e f g h i
+#Tarpiting a b c d e f g h i
+Tarpiting 10 100 200 400 600 200 10000 1200 9000 10000
