--- a/qotd.conf
+++ b/qotd.conf
@@ -1,6 +1,8 @@
 ### Archivo de configuracion del QOTD server ###
 ##### Si se desea el comportamiento por defecto, comentar la linea "Data" ###
 ### Las ip deben tener el formato: IP x.x.x.x y.y.y.y z.z.z.z ###
-IP 192.168.126.134 192.168.85.140 127.0.0.1
+#IP 192.168.126.137 192.168.85.148
+IP 10.0.2.15
 #Data Saludo
-Tarpiting a b c d e f g h i
+#Tarpiting a b c d e f g h i
+Tarpiting 10 100 200 400 600 200 10000 1200 9000 10000
