--- a/dns.conf
+++ b/dns.conf
@@ -1,10 +1,11 @@
 ### Archivo de configuracion del DNS server ###
 ##### Si se desea el comportamiento por defecto, comentar la linea correspondiente al registro ###
+#### Registros soportados A,MX,NS #####
 ### Las ip deben tener el formato: IP x.x.x.x y.y.y.y z.z.z.z ###
-#IP 192.168.126.135 192.168.85.141 
-IP 10.0.2.15
-A 132.248.1.1
-MX mail.test
-NS dns.test
-#Tarpiting a b c d e f g h i
+##### El Tarpiting debe tener el siguiente formato: Tarpiting a b c d e f g h i j  (max 10)
+IP 192.168.126.135 192.168.85.141 127.0.0.1 
+#IP 10.0.2.15
+#A 132.248.1.1
+#MX mail.test
+#NS dns.test
 Tarpiting 10 100 200 400 600 200 10000 1200 9000 10000
