--- a/snmp.conf
+++ b/snmp.conf
@@ -1,8 +1,8 @@
 ### Archivo de configuracion del CHARGEN server ###
 ##### Si se desea el comportamiento por defecto, comentar la linea "Data" ###
+##### La linea Data debe contener una cadena en formato hexadecimal ####
 ### Las ip deben tener el formato: IP x.x.x.x y.y.y.y z.z.z.z ###
-IP 192.168.126.134 192.168.85.140
+IP 192.168.126.134 192.168.85.140 127.0.0.1
 #IP 10.0.2.15 
-#Data 12345678900qwertyuiopasdfghjklñzxcvbnm,
-#Tarpiting a b c d e f g h i
+#Data 000102030405060708090a0b0c0d0e0f
 Tarpiting 10 100 200 400 600 200 10000 1200 9000 10000
