--- a/netbios.conf
+++ b/netbios.conf
@@ -1,5 +1,7 @@
-### Archivo de configuracion del CHARGEN server ###
+### Archivo de configuracion del NETBIOS server ###
 ### Las ip deben tener el formato: IP x.x.x.x y.y.y.y z.z.z.z ###
+## La linea de equipo permite indicar el nombre del equipo que se le devolverá al solicitante ##
+
 #IP 192.168.126.136 192.168.85.131
 IP 10.0.2.15
 Equipo HoneyP
