--- a/chargen.conf
+++ b/chargen.conf
@@ -4,5 +4,5 @@
 IP 192.168.126.134 192.168.85.140
 #IP 10.0.2.15 
 #Data 12345678900qwertyuiopasdfghjklñzxcvbnm,
-#Tarpiting a b c d e f g h i
+#Tarpiting 1 2 3 4 5 6 7 8 9 10
 Tarpiting 10 100 200 400 600 200 10000 1200 9000 10000
