--- a/ssdp.conf
+++ b/ssdp.conf
@@ -1,6 +1,11 @@
-### Archivo de configuracion del CHARGEN server ###
+### Archivo de configuración del NETBIOS server ###
 ### Las ip deben tener el formato: IP x.x.x.x y.y.y.y z.z.z.z ###
-#IP 192.168.126.137 192.168.85.200
+## LOCATION define la URL del servicio que será descubierto.
+## SERVER Versión y tipo de servidor descubierto.
+## ST: tipo de servicio
+## USN (Unique Service Name) contiene una identificación única.
+#El tarpiting deberá tener el formato Tarpiting 1 2 3 4 5 6 7 8 9 10, donde los números representan una cantidad en microsegundos ###
+
 IP 10.0.2.15
 LOCATION http://192.168.10.51:8080/udap/api/data?target=smartText.xml
 SERVER Linux/2.6.18-308.4.1.el5 UDAP/2.0 LGSmartTV_33/2.0
