--- a/ssdp.conf
+++ b/ssdp.conf
@@ -1,4 +1,4 @@
-### Archivo de configuración del NETBIOS server ###
+### Archivo de configuración del SSDP server ###
 ### Las ip deben tener el formato: IP x.x.x.x y.y.y.y z.z.z.z ###
 ## LOCATION define la URL del servicio que será descubierto.
 ## SERVER Versión y tipo de servidor descubierto.
