--- a/ntp.conf
+++ b/ntp.conf
@@ -1,5 +1,6 @@
-### Archivo de configuracion del CHARGEN server ###
+### Archivo de configuracion del NTP server ###
 ### Las ip deben tener el formato: IP x.x.x.x y.y.y.y z.z.z.z ###
 #IP 192.168.126.130 192.168.85.132
+#El tarpiting deberá tener el formato Tarpiting 1 2 3 4 5 6 7 8 9 10, donde los números representan una cantidad en microsegundos ###
 IP 10.0.2.15
 Tarpiting 50 100 200 400 600 300 10000 1200 9000 10000
