--- a/dns.conf
+++ b/dns.conf
@@ -2,7 +2,7 @@
 ##### Si se desea el comportamiento por defecto, comentar la linea correspondiente al registro ###
 #### Registros soportados A,MX,NS #####
 ### Las ip deben tener el formato: IP x.x.x.x y.y.y.y z.z.z.z ###
-##### El Tarpiting debe tener el siguiente formato: Tarpiting a b c d e f g h i j  (max 10)
+##### El Tarpiting debe tener el siguiente formato: Tarpiting 1 2 3 4 5 6 7 8 9 10  (max 10)
 IP 192.168.126.135 192.168.85.141 127.0.0.1 
 #IP 10.0.2.15
 #A 132.248.1.1
