--- a/chargen.conf
+++ b/chargen.conf
@@ -1,8 +1,9 @@
 ### Archivo de configuracion del CHARGEN server ###
 ##### Si se desea el comportamiento por defecto, comentar la linea "Data" ###
 ### Las ip deben tener el formato: IP x.x.x.x y.y.y.y z.z.z.z ###
-IP 192.168.126.134 192.168.85.140
+### Los datos de prueba de impresion tiene el formato: Data datosdatos
+##### El Tarpiting debe tener el siguiente formato: Tarpiting 1 2 3 4 5 6 7 8 9 10  (max 10)
+IP 192.168.126.134 192.168.85.140 127.0.0.1
 #IP 10.0.2.15 
 #Data 12345678900qwertyuiopasdfghjklñzxcvbnm,
-#Tarpiting a b c d e f g h i
 Tarpiting 10 100 200 400 600 200 10000 1200 9000 10000
