--- a/dns.conf
+++ b/dns.conf
@@ -6,7 +6,8 @@
 #IP 192.168.126.135 192.168.85.141 127.0.0.1 
 IP 127.0.0.1 192.168.1.102
 #IP 10.0.2.15
-#A 132.248.1.1
-#MX mail.test
-#NS dns.test
+A 132.248.1.1
+MX mail.test
+NS dns.test
+#PTR reverse.test
 Tarpiting 10 100 200 400 600 200 10000 1200 9000 10000
